--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title:               Living Atlases
 email:               example@gmail.com
 tagline:             Living Atlases community
-url:                 "" # insert your site's URL
+url:                 "https://melecoq.github.io/Living-Atlases-website/" # insert your site's URL
 baseurl:             ""
 
 # About/contact
