--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 title:               Living Atlases
 email:               example@gmail.com
 tagline:             Living Atlases community
-url:                 "https://melecoq.github.io/Living-Atlases-website/" # insert your site's URL
-baseurl:             ""
+url:                 "https://melecoq.github.io/" # insert your site's URL
+baseurl:             "Living-Atlases-website"
 
 # About/contact
 author: # you can edit these to be your personal details
