--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title:               Living Atlases
 email:               example@gmail.com
 tagline:             Living Atlases community
 url:                 "https://melecoq.github.io/" # insert your site's URL
-baseurl:             "https://melecoq.github.io/Living-Atlases-website/"
+baseurl:             "https://melecoq.github.io/"
 
 # About/contact
 author: # you can edit these to be your personal details
