--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title:               Living Atlases
 email:               example@gmail.com
 tagline:             Living Atlases community
-url:                 "https://melecoq.github.io" # insert your site's URL
+url:                 "https://melecoq.github.io/Living-Atlases-website" # insert your site's URL
 baseurl:             "https://melecoq.github.io/Living-Atlases-website"
 
 # About/contact
