--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ email:               example@gmail.com
 tagline:             Living Atlases community
 url:                 "https://melecoq.github.io/Living-Atlases-website/" # insert your site's URL
 baseurl:             "https://melecoq.github.io/Living-Atlases-website/"
+# url: 
+# baseurl: 
 
 # About/contact
 author: # you can edit these to be your personal details
