--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 title:               Living Atlases
 email:               example@gmail.com
 tagline:             Living Atlases community
-url:                 "https://melecoq.github.io/Living-Atlases-website/" # insert your site's URL
-baseurl:             "https://melecoq.github.io/Living-Atlases-website/"
-# url: 
-# baseurl: 
+#url:                 "https://melecoq.github.io/Living-Atlases-website/" # insert your site's URL
+#baseurl:             "https://melecoq.github.io/Living-Atlases-website/"
+url: 
+baseurl: 
 
 # About/contact
 author: # you can edit these to be your personal details
@@ -42,13 +42,13 @@ permalink:    pretty
 
 widgets:
   - title: Modules
-    url: about
+    url: modules
     archor: true
   - title: Documentation & Links
-    url: features
+    url: docs
     archor: true
   - title: Participants
-    url: docs
+    url: participants
     archor: true
   - title: Contact
     url: contact
