README + optimization carousel

--- a/_data/participants.yml
+++ b/_data/participants.yml
@@ -1,5 +1,5 @@
 - institution: Atlas of Living Australia
-  data-portal: https://www.ala.au.org
+  data-portal: https://www.ala.org.au
   gbif-page: https://www.gbif.org/project/82983/atlas-of-living-australia
   country: Australia
   language: English
