--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -11,7 +11,7 @@
 - id: 3
   active: false
   image_name: costa-rica.jpg
-  caption: TDWG 2016 - Santa Clara de San Jose, France <br /> Photo by Fabien Cavière, GBIF France
+  caption: TDWG 2016 - Santa Clara de San Jose, Costa Rica <br /> Photo by Fabien Cavière, GBIF France
 
 - id: 4
   active: false
