--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -42,3 +42,13 @@
 #   active: false
 #   image_name: International-ala-workshop-2015-1.jpg
 #   caption: International ALA workshop 2015 - Paris, France <br /> Photo by Sophie Pamerlon, GBIF France
+
+- id: 9
+  active: false
+  image_name: canberra1.jpg
+  caption: International ALA workshop 2014 - Canberra, Australia <br /> Photo by Atlas of Living Australia
+
+- id: 10
+  active: false
+  image_name: canberra2.jpg
+  caption: International ALA workshop 2014 - Canberra, Australia <br /> Photo by Atlas of Living Australia
