--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,25 +1,102 @@
-- id: "4"
+- id: "13"
   title: "Living Atlases workshop (CESP)"
   type: Workshop
-  description: <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rhoncus, tellus in sodales commodo, nunc orci consectetur diam, in aliquam nulla dui at purus. Quisque sapien dolor, pulvinar et ornare porttitor, suscipit id est. Nullam nibh nulla, tempus id diam ac, ullamcorper vulputate massa. Phasellus non dui quis enim suscipit condimentum malesuada vel ligula. Vivamus volutpat, dui sed ultrices rutrum, nunc lacus rutrum orci, vel dapibus ex lorem vitae nisl. Etiam ultricies magna vel metus posuere, sed faucibus elit fringilla. Donec porttitor tortor ex.</p> <p class="text-justify">Phasellus non interdum dolor. Pellentesque ac sem id ipsum egestas bibendum id id enim. Nam tincidunt nisi quis metus tempus, in egestas ipsum elementum. Morbi tempor eros ut nibh molestie, in pellentesque tortor rutrum. Suspendisse ut lorem ac velit congue viverra eget ut turpis. Pellentesque orci odio, semper et mauris at, euismod vestibulum diam. Etiam euismod pulvinar nunc non facilisis. Fusce volutpat turpis turpis, ut dignissim mauris facilisis in. Nunc ligula urna, elementum eget gravida sed, dignissim at massa. Duis malesuada sagittis augue. Nulla quam arcu, pretium quis commodo id, accumsan ut libero. Duis viverra ipsum ac congue pharetra. Nunc eu diam ac sapien facilisis vulputate. Vivamus congue nunc eu leo placerat auctor et sed tortor. </p>
+  description: <p class="text-justify">The Living Atlases community answer the GBIF CESP call for funding a technical workshop around Atlas of Living Australia tool </p>
   date: February 12, 2018 - February 16, 2018
   place: Madrid, Spain - Real Jardin Botanico
   valide: true
 
-- id: "3"
+- id: "12"
   title: "Reusing an open source platform in order to create a community: example of the Living Atlases community (TDWG)"
   type: Workshop
-  description: <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rhoncus, tellus in sodales commodo, nunc orci consectetur diam, in aliquam nulla dui at purus. Quisque sapien dolor, pulvinar et ornare porttitor, suscipit id est. Nullam nibh nulla, tempus id diam ac, ullamcorper vulputate massa. Phasellus non dui quis enim suscipit condimentum malesuada vel ligula. Vivamus volutpat, dui sed ultrices rutrum, nunc lacus rutrum orci, vel dapibus ex lorem vitae nisl. Etiam ultricies magna vel metus posuere, sed faucibus elit fringilla. Donec porttitor tortor ex.</p> <p class="text-justify">Phasellus non interdum dolor. Pellentesque ac sem id ipsum egestas bibendum id id enim. Nam tincidunt nisi quis metus tempus, in egestas ipsum elementum. Morbi tempor eros ut nibh molestie, in pellentesque tortor rutrum. Suspendisse ut lorem ac velit congue viverra eget ut turpis. Pellentesque orci odio, semper et mauris at, euismod vestibulum diam. Etiam euismod pulvinar nunc non facilisis. Fusce volutpat turpis turpis, ut dignissim mauris facilisis in. Nunc ligula urna, elementum eget gravida sed, dignissim at massa. Duis malesuada sagittis augue. Nulla quam arcu, pretium quis commodo id, accumsan ut libero. Duis viverra ipsum ac congue pharetra. Nunc eu diam ac sapien facilisis vulputate. Vivamus congue nunc eu leo placerat auctor et sed tortor. </p>
+  description: <p class="text-justify">Since 2013, a community has grown around the Atlas of Living Australia (ALA) open source platform, mostly but not exclusively around GBIF nodes. Indeed, since 2014 five international workshops have been organized around the world and eight data portals have been released into production using this tool (ALA [1], Brazil [2], GBIF Argentina [3], GBIF Costa Rica [4], GBIF France [5], NBN [6], GBIF Spain [7], GBIF Portugal [8]) and several others are currently in development (Canadensys, GBIF Sweden, etc.). Here you can find a map representing all countries with an interest in implementing ALA as their national data portal [9].</p>
+    <p class="text-justify">ALA modules work with standards defined by the TDWG community. Data shown on maps are loaded through Darwin Core Archive files previously published from IPT or directly downloaded on the GBIF.org. Users can filter and download occurrences and can also interact with data using API proposed by the platform. We keep the data authority and highlight data publishers, institutions, collections and datasets by showing their metadata. Moreover, using this ALA technology as national data portals is the solution recommended in the GBIF Implementation Plan 2017 - 2021[10].</p>
+    <p class="text-justify">One of the main objectives of this workshop will be to present the community of Living Atlases by showing examples already in production (Atlas of Living Australia, GBIF France, GBIF Spain and NBN Atlas Scotland), and past & future projects involving the community. In addition, we expect to train participants in the basic ALA modules (Collectory [11] and Biocache-hub [12]) that focus on occurrence research tools, data visualization and metadata portal. This technical training will also include the installation of an ALA demo version in order to give the possibility to users to make their first configurations and developments of their new tool.</p>
+    <p class="text-justify">The six organizers will be David Martin from Atlas of Living Australia, Christian Gendreau, Jeremy Goimard from Canadensys, Marie-Elise Lecoq from GBIF France, Santiago Martínez de la Riva from GBIF Spain and Manash Shah from GBIF Sweden. </p>
   date: October 3, 2017 - October 4, 2017
   place: Ottawa, Canada
   valide: true
 
-- id: "2"
+- id: "11"
+  title: "European Nodes Meeting 2017"
+  type: Workshop
+  description: <p class="text-justify">Organized as side event of the 2017 European Nodes Meeting, this workshop brings together developers and node managers working on national installations of the ALA software.</p>
+  date: May 11, 2017 - May 8, 2017
+  place: Stockholm, Sweden - 
+  valide: false
+
+- id: "10"
+  title: "TDWG 2016: Standards Supporting Innovation in Biodiversity Research and Conservation"
+  type: Conference
+  description: <p class="text-justify">Presentation of poster and talk about Living Atlases community</p>
+  date: December 5, 2016 - December 9, 2016
+  place: Santa Clara de San Carlos, Costa Rica - Tecnológico de Costa Rica (TEC)
+  valide: false
+
+- id: "9"
+  title: "International ALA Workshop"
+  type: Workshop
+  description: <p class="text-justify">This workshop brings together software developers from the GBIF network to enhance the development of national data portals based on the Atlas of Living Australia’s open-source infrastructure. Attendees include representatives from the national nodes of Australia, France, Germany, Mexico, Portugal, Spain and Sweden along with organizational member Canadensys.</p>
+  date: October 3, 2016 - October 5, 2016
+  place: Madrid, Spain - Royal Botanical Garden
+  valide: false
+
+- id: "8"
+  title: "GEO BON Open Science Conference"
+  type: Conference
+  description: <p class="text-justify">Presentation of an installation of Atlas of Living platform in another GBIF node (France)</p>
+  date: July 4, 2016 - July 8, 2016
+  place: Liepzig, Germany - 
+  valide: false
+
+- id: "7"
+  title: "Public Symposium, GB22"
+  type: Conference
+  description: <p class="text-justify">Presentation during the Public Symposium</p>
+  date: October 9, 2015 
+  place: Antananarivo, Madagascar -
+  valide: false
+
+- id: "6"
+  title: "TDWG 2015: Applications, Standards and Capacity Building for Sustaining Global Biodiversity"
+  type: Conference
+  description: <p class="text-justify">Presentation</p>
+  date: September 28, 2015 - October 1, 2015
+  place: Nairobi, Kenya - Windsor Golf and Country Club
+  valide: false
+
+- id: "5"
+  title: "2nd meeting of the CoopBioPlat project"
+  type: Workshop
+  description: <p class="text-justify">CoopBioPlat brings together GBIF nodes in Argentina (SNDB), Brazil (SiBBr), Costa Rica (CRBio), France, Portugal and Spain to produce an institutional agreement to cooperate on developing national biodiversity data portals based on the ALA portal. The meeting also aims to further the customization of the ALA Platform by GBIF Nodes. This 2nd meeting focuses on IT developments. Developers among the project’s partners will be assisted at the meeting by David Martin from ALA.</p>
+    <p class="text-justify">CoopBioPlat is a Pilot Coordination Action, funded by ERANet-LAC of the European Commission, and will be implemented over 18 months.</p>
+    <p class="text-justify">More information is available on the website of GBIF Spain.</p>
+  date: October 20, 2015 - October 23, 2015
+  place: Madrid, Spain - Royal Botanical Garden
+  valide: false
+
+- id: "4"
   title: "GBIF France launched its data portal in production"
   type: Portal
-  description: <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rhoncus, tellus in sodales commodo, nunc orci consectetur diam, in aliquam nulla dui at purus. Quisque sapien dolor, pulvinar et ornare porttitor, suscipit id est. Nullam nibh nulla, tempus id diam ac, ullamcorper vulputate massa. Phasellus non dui quis enim suscipit condimentum malesuada vel ligula. Vivamus volutpat, dui sed ultrices rutrum, nunc lacus rutrum orci, vel dapibus ex lorem vitae nisl. Etiam ultricies magna vel metus posuere, sed faucibus elit fringilla. Donec porttitor tortor ex.</p> <p class="text-justify">Phasellus non interdum dolor. Pellentesque ac sem id ipsum egestas bibendum id id enim. Nam tincidunt nisi quis metus tempus, in egestas ipsum elementum. Morbi tempor eros ut nibh molestie, in pellentesque tortor rutrum. Suspendisse ut lorem ac velit congue viverra eget ut turpis. Pellentesque orci odio, semper et mauris at, euismod vestibulum diam. Etiam euismod pulvinar nunc non facilisis. Fusce volutpat turpis turpis, ut dignissim mauris facilisis in. Nunc ligula urna, elementum eget gravida sed, dignissim at massa. Duis malesuada sagittis augue. Nulla quam arcu, pretium quis commodo id, accumsan ut libero. Duis viverra ipsum ac congue pharetra. Nunc eu diam ac sapien facilisis vulputate. Vivamus congue nunc eu leo placerat auctor et sed tortor. </p>
+  description: <p class="text-justify">GBIF France launched its new data portal based on Atlas of Living Australia tools. </p>
   date: May 28, 2015 
   place: Paris, France
+  valide: false
+
+- id: "3"
+  title: "Atlas of Living Europe workshop"
+  type: Workshop
+  description: <p class="text-justify">Organized as side event of the 2015 European Nodes Meeting, this workshop is a sequel to last year’s ALA Workshop in Canberra and brings together developers and node managers working on national installations of the ALA software.</p>
+  date: May 4, 2015 - May 5, 2015
+  place: Paris, France - Muséum national d'Histoire naturelle
+  valide: false
+
+- id: "2"
+  title: "Atlas of Living Australia workshop"
+  type: Workshop
+  description: <p class="text-justify">Workshop for data portal developers interested by Atlas of Living Australia platform. It took place in ALA officies in Canberra, Australia</p>
+  date: July 20, 2014 - July 24, 2014
+  place: Canberra, Australia - Atlas of Living Australia office
   valide: false
 
 - id: "1"
