--- a/_data/events/09.yml
+++ b/_data/events/09.yml
@@ -1,5 +1,5 @@
 id: "9"
-title: "International ALA Workshop"
+title: "International ALA Workshop 2016"
 type: Workshop
 description: <p class="text-justify">This workshop brings together software developers from the GBIF network to enhance the development of national data portals based on the Atlas of Living Australia’s open-source infrastructure. Attendees include representatives from the national nodes of Australia, France, Germany, Mexico, Portugal, Spain and Sweden along with organizational member Canadensys.</p>
 date: October 3, 2016 - October 5, 2016
