--- a/_data/events/02.yml
+++ b/_data/events/02.yml
@@ -1,7 +1,7 @@
 id: "2"
 title: "Atlas of Living Australia workshop"
 type: Workshop
-description: <p class="text-justify">Workshop for data portal developers interested by Atlas of Living Australia platform. It took place in ALA officies in Canberra, Australia</p>
+description: <p class="text-justify">Workshop for data portal developers interested by Atlas of Living Australia platform. It took place in ALA officies in Canberra, Australia.</p>
 date: July 20, 2014 - July 24, 2014
 place: Canberra, Australia - Atlas of Living Australia office
 valide: false
