--- a/_data/events/05.yml
+++ b/_data/events/05.yml
@@ -8,16 +8,52 @@ date: October 20, 2015 - October 23, 2015
 place: Madrid, Spain - Royal Botanical Garden
 valide: false
 materials:
-- id: "2"
-  event_id: "5"
-  speaker: "Santiago Martinez de la Riva (GBIF Spain)"
-  title: "Biodiversity platform of GBIF Spain based on ALA"
-  link: "https://drive.google.com/file/d/0B40d0nSKU6fzT0VocmVGUFA1WFk/view?usp=sharing"
-  type: "talk"
-
 - id: "1"
-  event_id: "5"
   speaker: "Dave Martin (Atlas of Living Australia)"
-  title: "Launching Atlas of Living Scotland"
-  link: "https://docs.google.com/presentation/d/1l08S0u0nznCdAPeihtYHGE_DX3Ny-wbnKMJqichadSU/edit"
+  title: "Atlas of Living Scotland: setup and deployment"
+  link: "5-ALS-setup-deployment.pdf"
   type: "talk"
+  ext: false
+
+- id: "2"
+  speaker: "Santiago Martinez de la Riva (GBIF Spain)"
+  title: "Biodiversity platform of GBIF Spain based on ALA: current state"
+  link: "5-CoopBioPlat-GBIF-SPAIN.pdf"
+  type: "Talk"
+  ext: false
+
+- id: "3"
+  speaker: "Luis Eugenio Barbosa (GBIF Brazil)"
+  title: "CoopBioPlat: Brazil status"
+  link: ""
+  type: "Talk"
+
+- id: "4"
+  speaker: "Miguel Carboni (GBIF Argentina)"
+  title: "CoopBioPlat - Argentina Status"
+  link: "5-CoopBioPlat-Argentina-Status.pdf"
+  type: "Talk"
+  ext: false
+
+- id: "5"
+  speaker: "Rui Figueira (GBIF Portugal)"
+  title: "GBIF.PT report"
+  link: "5-CoopBioPlat_pt_report.pdf"
+  type: "Talk"
+  ext: false
+
+- id: "6"
+  speaker: "Marie-Elise Lecoq (GBIF France)"
+  title: "Atlas of Living France (ALF)"
+  link: "5-ALF.pdf"
+  type: "Talk"
+  ext: false
+
+- id: "7"
+  speaker: "Paco Pando (GBIF Spain), <br />Rui Figueira (GBIF Portugal), <br />David Martin (Atlas of Living Australia), <br />Marie-Elise Lecoq (GBIF France), <br />Fabien Cavière (GBIF France), <br />Santiago Martinez de la Riva (GBIF Spain), <br />Miguel Carboni (Ministry of Science and Technology, Argentina), <br />Luis Eugênio Barbosa (GBIF Brazil)."
+  title: "CoopBioPlat - Madrid 2015"
+  link: "https://www.youtube.com/watch?v=molYVbldkwM&feature=youtu.be"
+  ext: true
+  type: "Video"
+
+
