--- a/_data/events/12.yml
+++ b/_data/events/12.yml
@@ -1,10 +1,14 @@
 id: "12"
-title: "Reusing an open source platform in order to create a community: example of the Living Atlases community (TDWG)"
-type: Workshop
-description: <p class="text-justify">Since 2013, a community has grown around the Atlas of Living Australia (ALA) open source platform, mostly but not exclusively around GBIF nodes. Indeed, since 2014 five international workshops have been organized around the world and eight data portals have been released into production using this tool (ALA [1], Brazil [2], GBIF Argentina [3], GBIF Costa Rica [4], GBIF France [5], NBN [6], GBIF Spain [7], GBIF Portugal [8]) and several others are currently in development (Canadensys, GBIF Sweden, etc.). Here you can find a map representing all countries with an interest in implementing ALA as their national data portal [9].</p>
-    <p class="text-justify">ALA modules work with standards defined by the TDWG community. Data shown on maps are loaded through Darwin Core Archive files previously published from IPT or directly downloaded on the GBIF.org. Users can filter and download occurrences and can also interact with data using API proposed by the platform. We keep the data authority and highlight data publishers, institutions, collections and datasets by showing their metadata. Moreover, using this ALA technology as national data portals is the solution recommended in the GBIF Implementation Plan 2017 - 2021[10].</p>
-    <p class="text-justify">One of the main objectives of this workshop will be to present the community of Living Atlases by showing examples already in production (Atlas of Living Australia, GBIF France, GBIF Spain and NBN Atlas Scotland), and past & future projects involving the community. In addition, we expect to train participants in the basic ALA modules (Collectory [11] and Biocache-hub [12]) that focus on occurrence research tools, data visualization and metadata portal. This technical training will also include the installation of an ALA demo version in order to give the possibility to users to make their first configurations and developments of their new tool.</p>
-    <p class="text-justify">The six organizers will be David Martin from Atlas of Living Australia, Christian Gendreau, Jeremy Goimard from Canadensys, Marie-Elise Lecoq from GBIF France, Santiago Martínez de la Riva from GBIF Spain and Manash Shah from GBIF Sweden. </p>
-date: October 3, 2017 - October 4, 2017
-place: Ottawa, Canada
-valide: true
+title: "Regional Engagement Workshop, BID Caribbean"
+type: Meeting
+description: <p class="text-justify">During the Caribbean regional meeting around BID projects, Marie-Elise Lecoq, GBIF France lead developer presented the community. The discussion introduced by this presentation helped the BID project leads to work on the possibility of using Atlas of Living modules for creating a regional platform for Caribbean countries. </p>
+date: June 22nd, 2017 - June 23rd, 2017
+place: St Augustine, Trinidad and Tobago -  University of West Indies
+valide: false
+materials:
+- id: "1"
+  speaker: "<b>Marie-Elise Lecoq (GBIF France) </b>, <br /> David Martin (Atlas of Living Australia)."
+  title: "Living Atlases community"
+  link: "12-ALA-community.pdf"
+  type: "Talk"
+  ext: false
