--- a/_data/events/02.yml
+++ b/_data/events/02.yml
@@ -5,3 +5,4 @@ description: <p class="text-justify">Workshop for data portal developers interes
 date: July 20, 2014 - July 24, 2014
 place: Canberra, Australia - Atlas of Living Australia office
 valide: false
+presentation: false
