--- a/_data/participants.yml
+++ b/_data/participants.yml
@@ -84,7 +84,7 @@
 
 - institution: University of Tartu Natural History Museum
   country: Estonia
-  status: In production
+  status: In progress
 
 - country: Philippine
   status: In discussion
