--- a/_data/events/04.yml
+++ b/_data/events/04.yml
@@ -3,8 +3,9 @@ title: "GBIF France data portal in production (28/05/2015)"
 type: Portal
 description: <p class="text-justify">Since the Atlas of Living Australia workshop, the GBIF France technical team have worked on the national GBIF data portal based on Atlas of living Australia. For this release,they installed the registry and biocache modules. They launch this new tool during the GBIF France annual steering comity.</p>
 date: May 28, 2015 
-place: Paris, France
+place: Paris, France - Muséum national d'Histoire naturelle
 valide: false
+presentation: true
 materials:
 - id: "1"
   speaker: "Marie-Elise Lecoq, <br /> Fabien Cavière."
