--- a/_data/events/08.yml
+++ b/_data/events/08.yml
@@ -1,7 +1,15 @@
 id: "8"
-title: "GEO BON Open Science Conference"
-type: Conference
-description: <p class="text-justify">Presentation of an installation of Atlas of Living platform in another GBIF node (France)</p>
-date: July 4, 2016 - July 8, 2016
-place: Liepzig, Germany - 
+title: "GBIF France spatial portal in production (10/06/2015)"
+type: Portal
+description: <p class="text-justify">During the GBIF France 10th anniversary, GBIF France technical team present the new spatial portal based on Atlas of Living Australia modules. </p>
+date: June 10, 2016 
+place: Paris, France - Muséum national d'Histoire naturelle
 valide: false
+presentation: true
+materials:
+- id: "1"
+  speaker: "Marie-Elise Lecoq, <br /> Fabien Cavière."
+  title: "The French GBIF national spatial portal (Atlas of Living France)"
+  link: "http://spatial.gbif.fr"
+  type: "Portal"
+  ext: true 
