--- a/_data/events/11.yml
+++ b/_data/events/11.yml
@@ -1,7 +1,21 @@
 id: "11"
-title: "European Nodes Meeting 2017"
-type: Workshop
-description: <p class="text-justify">Organized as side event of the 2017 European Nodes Meeting, this workshop brings together developers and node managers working on national installations of the ALA software.</p>
-date: May 11, 2017 - May 8, 2017
-place: Stockholm, Sweden - 
+title: "TDWG 2016: Standards Supporting Innovation in Biodiversity Research and Conservation"
+type: Conference
+description: <p class="text-justify">During the conference, the GBIF France's team with the help of the community presented the Living Atlases as well as the Atlas of Living Australia modules. Through a talk, the GBIF France's technical team was able to described an existing example of national data portal based on ALA platform in order to show how it works for potential future users of these tools. The community wrote its first poster showing its members and its projects. </p>
+date: December 5, 2016 - December 9, 2016
+place: Santa Clara de San Carlos, Costa Rica - Tecnológico de Costa Rica (TEC)
 valide: false
+presentation: true
+materials:
+- id: "1"
+  speaker: "<b>Marie-Elise Lecoq (GBIF France)</b>, <br /> Anne-Sophie Archambeau (GBIF France), <br /> Eric Chenin (IRD - GBIF France), <br /> Fabien Cavière (GBIF France), <br /> Sophie Pamerlon (GBIF France), <br /> Régine Vignes-Lebbe (UPMC - GBIF France)."
+  title: www.gbif.fr - French National Portal of GBIF
+  link: "11-Lecoq-ALF.pdf"
+  type: "Talk"
+  ext: false
+- id: "2"
+  speaker: "Marie-Elise Lecoq (GBIF France), <br/> Miguel Carboni (Sistema Nacional de Datos Biológicos), <br/> Fabien Cavière (GBIF France), <br/> Rui Figueira (GBIF Portugal), <br/> Santiago Martinez de la Riva (GBIF Spain), <br/> David Martin (Atlas of Living Australia)"
+  title: "The community around Atlas of Living Australia's platform"
+  link: "11-poster-community.pdf"
+  type: "Poster"
+  ext: false
