--- a/_data/events/13.yml
+++ b/_data/events/13.yml
@@ -1,14 +1,15 @@
 id: "13"
-title: "Regional Engagement Workshop, BID Pacific"
+title: "Regional Engagement Workshop, BID Caribbean"
 type: Meeting
-description: <p class="text-justify">During the Pacific regional meeting around BID projects, Anne-Sophie Archambeau, GBIF France node manager, presented the community. The discussion introduced by this presentation helped the BID project leads to work on the possibility of using Atlas of Living modules for creating a regional platform using National Biodiviersity Network Atlas from UK, as an example. </p>
-date: July 27th, 2017 - July 28th, 2017
-place: Apia, Samoa - SPREP Headquarters
+description: <p class="text-justify">During the Caribbean regional meeting around BID projects, Marie-Elise Lecoq, GBIF France lead developer presented the community. The discussion introduced by this presentation helped the BID project leads to work on the possibility of using Atlas of Living modules for creating a regional platform for Caribbean countries. </p>
+date: June 22nd, 2017 - June 23rd, 2017
+place: St Augustine, Trinidad and Tobago -  University of West Indies
 valide: false
+presentation: true
 materials:
 - id: "1"
-  speaker: "<b>Anne-Sophie Archambeau (GBIF France)</b>, <br /> David Martin (Atlas of Living Australia), <br /> Marie-Elise Lecoq (GBIF France)."
+  speaker: "<b>Marie-Elise Lecoq (GBIF France) </b>, <br /> David Martin (Atlas of Living Australia)."
   title: "Living Atlases community"
-  link: "13-ALA-community.pdf"
+  link: "12-ALA-community.pdf"
   type: "Talk"
   ext: false
