--- a/_data/events/15.yml
+++ b/_data/events/15.yml
@@ -1,7 +1,15 @@
 id: "15"
-title: "Living Atlases workshop (CESP)"
-type: Workshop
-description: <p class="text-justify">The Living Atlases community answer the GBIF CESP call for funding a technical workshop around Atlas of Living Australia tool </p>
-date: February 12, 2018 - February 16, 2018
-place: Madrid, Spain - Real Jardin Botanico
-valide: true
+title: "Regional Engagement Workshop, BID Pacific"
+type: Meeting
+description: <p class="text-justify">During the Pacific regional meeting around BID projects, Anne-Sophie Archambeau, GBIF France node manager, presented the community. The discussion introduced by this presentation helped the BID project leads to work on the possibility of using Atlas of Living modules for creating a regional platform using National Biodiviersity Network Atlas from UK, as an example. </p>
+date: July 27th, 2017 - July 28th, 2017
+place: Apia, Samoa - SPREP Headquarters
+valide: false
+presentation: true
+materials:
+- id: "1"
+  speaker: "<b>Anne-Sophie Archambeau (GBIF France)</b>, <br /> David Martin (Atlas of Living Australia), <br /> Marie-Elise Lecoq (GBIF France)."
+  title: "Living Atlases community"
+  link: "13-ALA-community.pdf"
+  type: "Talk"
+  ext: false
