--- a/_data/events/02.yml
+++ b/_data/events/02.yml
@@ -1,8 +1,8 @@
 id: "2"
-title: "Atlas of Living Australia workshop"
+title: "ALA/GBIF Software Workshop"
 type: Workshop
-description: <p class="text-justify">Workshop for data portal developers interested by Atlas of Living Australia platform. It took place in ALA officies in Canberra, Australia.</p>
+description: <p class="text-justify">The second workshop linked to the community had been hosted by Atlas of Living Australia (ALA). It was open for developers interested interested by ALA platform. There were people from Argentina, Brazil, Costa Rica, France, Malaysia and Spain.</p>
 date: July 20, 2014 - July 24, 2014
-place: Canberra, Australia - Atlas of Living Australia office
+place: Canberra, Australia - CSIRO office
 valide: false
 presentation: false
