correct bugs found by Sophie and Fabien

--- a/_data/events/05.yml
+++ b/_data/events/05.yml
@@ -1,8 +1,8 @@
 id: "5"
 title: "2nd meeting of the CoopBioPlat project"
 type: Workshop
-description: <p class="text-justify">CoopBioPlat brings together GBIF nodes in Argentina (SNDB), Brazil (SiBBr), Costa Rica (CRBio), France, Portugal and Spain to produce an institutional agreement to cooperate on developing national biodiversity data portals based on the ALA portal. The meeting also aims to further the customization of the ALA Platform by GBIF Nodes. This 2nd meeting focuses on IT developments. Developers among the project’s partners will be assisted at the meeting by David Martin from ALA.</p>
-    <p class="text-justify">CoopBioPlat is a Pilot Coordination Action, funded by ERANet-LAC of the European Commission, and will be implemented over 18 months.</p>
+description: <p class="text-justify">CoopBioPlat brought together GBIF nodes in Argentina (SNDB), Brazil (SiBBr), Costa Rica (CRBio), France, Portugal and Spain to produce an institutional agreement to cooperate on developing national biodiversity data portals based on the ALA portal. The meeting also aimed to further the customization of the ALA Platform by GBIF Nodes. This 2nd meeting focused on IT developments. Developers among the project’s partners were assisted at the meeting by David Martin from ALA.</p>
+    <p class="text-justify">CoopBioPlat was a Pilot Coordination Action, funded by ERANet-LAC of the European Commission, and was implemented over 18 months.</p>
     <p class="text-justify">More information is available on the website of GBIF Spain.</p>
 date: October 20, 2015 - October 23, 2015
 place: Madrid, Spain - Royal Botanical Garden
