--- a/_data/events/07.yml
+++ b/_data/events/07.yml
@@ -1,7 +1,7 @@
 id: "7"
 title: "Public Symposium, GB22"
 type: Conference
-description: <p class="text-justify">Paco Pando, former GBIF Spain node manager, talked about the power of a open source platform and collaborations linked to it for the entire open source community around the biodiversity during the public symposium of the GBIF governing board in 2015. </p>
+description: <p class="text-justify">Paco Pando, former GBIF Spain node manager, talked about the power of a open source platform and collaborations linked to it for the entire open source community around the biodiversity during the public symposium of the GBIF Governing Board in 2015. </p>
 date: October 9, 2015 
 place: Antananarivo, Madagascar - International Conference Center of Ivato
 valide: false
