--- a/_data/events/08.yml
+++ b/_data/events/08.yml
@@ -1,7 +1,7 @@
 id: "8"
 title: "GBIF France spatial portal in production (10/06/2015)"
 type: Portal
-description: <p class="text-justify">During the GBIF France 10th anniversary, GBIF France technical team present the new spatial portal based on Atlas of Living Australia modules. </p>
+description: <p class="text-justify">During the GBIF France 10th anniversary, GBIF France technical team presented the new spatial portal based on Atlas of Living Australia modules. </p>
 date: June 10, 2016 
 place: Paris, France - Muséum national d'Histoire naturelle
 valide: false
