--- a/_data/events/11.yml
+++ b/_data/events/11.yml
@@ -1,7 +1,7 @@
 id: "11"
 title: "TDWG 2016: Standards Supporting Innovation in Biodiversity Research and Conservation"
 type: Conference
-description: <p class="text-justify">During the conference, the GBIF France's team with the help of the community presented the Living Atlases as well as the Atlas of Living Australia modules. Through a talk, the GBIF France's technical team was able to described an existing example of national data portal based on ALA platform in order to show how it works for potential future users of these tools. The community wrote its first poster showing its members and its projects. </p>
+description: <p class="text-justify">During the conference, GBIF France team with the help of the community presented the Living Atlases as well as the Atlas of Living Australia modules. Through a talk, GBIF France technical team was able to describe an existing example of national data portal based on ALA platform in order to show how it works for potential future users of these tools. The community wrote its first poster showing its members and its projects. </p>
 date: December 5, 2016 - December 9, 2016
 place: Santa Clara de San Carlos, Costa Rica - Tecnológico de Costa Rica (TEC)
 valide: false
