--- a/_data/events/13.yml
+++ b/_data/events/13.yml
@@ -1,7 +1,7 @@
 id: "13"
 title: "Regional Engagement Workshop, BID Caribbean"
 type: Meeting
-description: <p class="text-justify">During the Caribbean regional meeting around BID projects, Marie-Elise Lecoq, GBIF France lead developer presented the community. The discussion introduced by this presentation helped the BID project leads to work on the possibility of using Atlas of Living modules for creating a regional platform for Caribbean countries. </p>
+description: <p class="text-justify">During the Caribbean regional meeting around BID projects, Marie-Elise Lecoq, GBIF France lead developer, presented the community. The discussion opened by this presentation helped the BID project leads to work on the possibility of using Atlas of Living modules for creating a regional platform for Caribbean countries. </p>
 date: June 22nd, 2017 - June 23rd, 2017
 place: St Augustine, Trinidad and Tobago -  University of West Indies
 valide: false
