--- a/_data/events/15.yml
+++ b/_data/events/15.yml
@@ -1,7 +1,7 @@
 id: "15"
 title: "Regional Engagement Workshop, BID Pacific"
 type: Meeting
-description: <p class="text-justify">During the Pacific regional meeting around BID projects, Anne-Sophie Archambeau, GBIF France node manager, presented the community. The discussion introduced by this presentation helped the BID project leads to work on the possibility of using Atlas of Living modules for creating a regional platform using National Biodiviersity Network Atlas from UK, as an example. </p>
+description: <p class="text-justify">During the Pacific regional meeting around BID projects, Anne-Sophie Archambeau, the GBIF France Node Manager, presented the Living Atlases community. The discussion opened by this presentation helped the BID project leads to work on the possibility of using Atlas of Living Australia modules for creating a regional platform using National Biodiversity Network Atlas from UK, as an example. </p>
 date: July 27th, 2017 - July 28th, 2017
 place: Apia, Samoa - SPREP Headquarters
 valide: false
