--- a/_data/events/03.yml
+++ b/_data/events/03.yml
@@ -1,7 +1,7 @@
 id: "3"
 title: "Atlas of Living Europe workshop"
 type: Workshop
-description: <p class="text-justify">Organized as side event of the 2015 European Nodes Meeting, this workshop is a sequel to last year’s ALA Workshop in Canberra and brings together developers and node managers working on national installations of the ALA software. This is the first workshop where developers outside Atlas of Living Australia began to teach about platform future </p>
+description: <p class="text-justify">Organized as side event of the 2015 European Nodes Meeting, this workshop was a sequel to the 2014 GBIF/ALA Workshop in Canberra and brought together developers and node managers working on national installations of the ALA software. This was the first workshop where developers outside Atlas of Living Australia began to teach about platform future </p>
 date: May 4, 2015 - May 5, 2015
 place: Paris, France - Muséum national d'Histoire naturelle
 valide: false
