--- a/_data/events/06.yml
+++ b/_data/events/06.yml
@@ -1,7 +1,7 @@
 id: "6"
 title: "TDWG 2015: Applications, Standards and Capacity Building for Sustaining Global Biodiversity"
 type: Conference
-description: <p class="text-justify">During the conference, the GBIF France's team with the help of the community presented the Living Atlases as well as the Atlas of Living Australia modules. Through a poster and a talk, the GBIF France's technical team was able to described an existing example of national data portal based on  ALA platform.</p>
+description: <p class="text-justify">During the conference, GBIF France team with the help of the community presented the Living Atlases as well as the Atlas of Living Australia modules. Through a poster and a talk, GBIF France technical team was able to describe an existing example of national data portal based on  ALA platform.</p>
 date: September 28, 2015 - October 1, 2015
 place: Nairobi, Kenya - Windsor Golf and Country Club
 valide: false
