--- a/_data/events/12.yml
+++ b/_data/events/12.yml
@@ -1,7 +1,7 @@
 id: "12"
 title: "European Nodes Meeting 2017"
 type: Meeting
-description: <p class="text-justify">During the European Nodes Meeting 2017, several presentations had been made by members of the community in order to present their work at the GBIF European community. A technical workshop between advanced members had been organized as side event of this meeting. </p>
+description: <p class="text-justify">During the European Nodes Meeting 2017, several presentations were made by members of the community in order to present their work to the GBIF European community. A technical workshop between advanced members was organized as a side event to this meeting. </p>
 date: May 8, 2017 - May 11, 2017
 place: Stockholm, Sweden - Swedish Museum of Natural History.
 valide: false
