--- a/_data/events/17.yml
+++ b/_data/events/17.yml
@@ -1,7 +1,7 @@
 id: "17"
 title: "Living Atlases workshop (CESP)"
 type: Workshop
-description: <p class="text-justify">Through the GBIF CESP Program, this 5-day workshop will be funded for partners of this project. The main objectives will be install or improve collectory and biocache modules, install or improve the spatial portal and BIE modules.</p> <p class="text-justify">If you like to participate but your are not a partner, you can contact GBIF Spain or <a href="http://www.gbif.fr/contact" target="_blank">GBIF France</a></p>
+description: <p class="text-justify">This 5-day workshop will be funded for partners of this project through the GBIF CESP Program. The main objectives will be install or improve collectory and biocache modules, to install or improve the spatial portal and BIE modules.</p> <p class="text-justify">If you like to participate but are not a partner, you can contact GBIF Spain or <a href="http://www.gbif.fr/contact" target="_blank">GBIF France</a></p>
 date: February 12, 2018 - February 16, 2018
 place: Madrid, Spain - Real Jardin Botanico
 valide: true
