--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ tagline:             Living Atlases community
 # url:                 "https://melecoq.github.io/Living-Atlases-website/" # insert your site's URL
 # baseurl:             "https://melecoq.github.io/Living-Atlases-website/"
 # url: 
-# baseurl: 
+site.github.url: "https://melecoq.github.io/Living-Atlases-website"
 
 # About/contact
 author: # you can edit these to be your personal details
