--- a/_data/events/07.yml
+++ b/_data/events/07.yml
@@ -11,5 +11,5 @@ materials:
   speaker: "Paco Pando (GBIF Spain)"
   title: "Atlas of Living Australia for GBIF Nodes: A collaborative endeavor"
   link: "7-ALA-for-nodes.pdf"
-  type: "talk"
+  type: "Talk"
   ext: false
