--- a/_data/events/09.yml
+++ b/_data/events/09.yml
@@ -1,21 +1,15 @@
 id: "9"
-title: "GEO BON Open Science Conference"
-type: Conference
-description:  <p class="text-justify">In July 2016, during the GEO BON conference, a session and hands-on workshop with "National Biodiversity Monitoring Network" as main subject had been proposed by iDiv, Atlas of Living Australia and other institutions. During this session, two presentations have been made about Atlas of Living Australia tools and community. All abstracts from this session are available on the <a href="http://conf2016.geobon.org/Downloads/PDF/GEOBON_Abstract_Book_OSC2016.pdf" target="_blank">official website</a> (beginning at page 99). </p>
-date: July 4, 2016 - July 8, 2016
-place: Liepzig, Germany - Helmholtz Centre for Environmental Research – UFZ
+title: "CRBio: Atlas of Living Costa Rica in production (1/05/2016)"
+type: Portal
+description: <p class="text-justify">Thanks to the help of Atlas of Living Australia and GBIF, the National Biodiversity Institute of Costa Rica (INBio) implemented a new portal based on ALA tools. The Atlas of Living Costa Rica (CRBio) has been financed by a project grant of the Costa Rican government. </p>
+date: May 1, 2016 
+place: Paris, France - Muséum national d'Histoire naturelle
 valide: false
 presentation: true
 materials:
 - id: "1"
-  speaker: "David Martin (CSIRO/GBIF), <br /> <b>Peter Brenton (CSIRO)</b>, <br /> Stephanie von Gavel (CSIRO)."
-  title: "The Atlas of Living Australia – A modular biodiversity information platform with global implementations"
-  link: ""
-  type: "Talk"
-- id: "2"
-  speaker: "Marie-Elise Lecoq (GBIF France), <br /> Dave Martin (Atlas of Living Australia)."
-  title: "Atlas of Living France: GBIF France's portal access to primary data about biodiversity provided by French institutions"
-  link: "9-Lecoq-GEOBON.pdf"
-  type: "Talk"
-  ext: false 
-
+  speaker: ""
+  title: "CRBio: Atlas of Living Costa Rica"
+  link: "http://www.crbio.cr/"
+  type: "Portal"
+  ext: true 
