--- a/_data/events/03.yml
+++ b/_data/events/03.yml
@@ -1,21 +1,15 @@
 id: "3"
-title: "Atlas of Living Europe workshop"
-type: Workshop
-description: <p class="text-justify">Organized as side event of the 2015 European Nodes Meeting, this workshop was a sequel to the 2014 GBIF/ALA Workshop in Canberra and brought together developers and node managers working on national installations of the ALA software. This was the first workshop where developers outside Atlas of Living Australia began to teach about platform future </p>
-date: May 4, 2015 - May 5, 2015
-place: Paris, France - Muséum national d'Histoire naturelle
+title: "GBIF.ES National Biodiversity Data Portal in production (28/11/2014)"
+type: Portal
+description: <p class="text-justify">Since the beginning, GBIF Spain has been part of the ALA community. They have worked on the Spanish National Biodiviersity Data portal of GBIF for several months before launching it in production. The data portal is available in Spanish, Catalan and English.</p>
+date: November 28th, 2014 
+place: Madrid, Spain - Real Jardín Botánico-CSIC
 valide: false
 presentation: true
 materials:
 - id: "1"
-  speaker: "David Martin (Atlas of Living Australia)"
-  title: "Architecture"
-  link: "2-architecture.pdf"
-  type: "Talk"
-  ext: false 
-- id: "2"
-  speaker: "David Martin (Atlas of Living Australia)"
-  title: "Operation"
-  link: "2-operation.pdf"
-  type: "Talk"
-  ext: false 
+  speaker: "Santiago Martinez de la Riva"
+  title: "The GBIF.ES National Biodiversity Data Portal "
+  link: "https://datos.gbif.es/"
+  type: "Portal"
+  ext: true 
