--- a/_data/events/07.yml
+++ b/_data/events/07.yml
@@ -1,15 +1,21 @@
 id: "7"
-title: "Public Symposium, GB22"
+title: "TDWG 2015: Applications, Standards and Capacity Building for Sustaining Global Biodiversity"
 type: Conference
-description: <p class="text-justify">Paco Pando, former GBIF Spain node manager, talked about the power of a open source platform and collaborations linked to it for the entire open source community around the biodiversity during the public symposium of the GBIF Governing Board in 2015. </p>
-date: October 9, 2015 
-place: Antananarivo, Madagascar - International Conference Center of Ivato
+description: <p class="text-justify">During the conference, GBIF France team with the help of the community presented the Living Atlases as well as the Atlas of Living Australia modules. Through a poster and a talk, GBIF France technical team was able to describe an existing example of national data portal based on  ALA platform.</p>
+date: September 28, 2015 - October 1, 2015
+place: Nairobi, Kenya - Windsor Golf and Country Club
 valide: false
 presentation: true
 materials:
 - id: "1"
-  speaker: "Paco Pando (GBIF Spain)"
-  title: "Atlas of Living Australia for GBIF Nodes: A collaborative endeavor"
-  link: "7-ALA-for-nodes.pdf"
+  speaker: "<b>Marie-Elise Lecoq (GBIF France)</b>, <br /> Dave Martin (Atlas of Living Australia), <br /> Tim Robertson (GBIF)."
+  title: "Atlas of Living Australia: a modular data portal framework for national needs"
+  link: "6-TDWG-talk.pdf"
   type: "Talk"
+  ext: false
+- id: "2"
+  speaker: "Marie-Elise Lecoq (GBIF France), <br /> Anne-Sophie Archambeau (GBIF France), <br /> Eric Chenin (IRD - GBIF France), <br /> Fabien Cavière (GBIF France), <br /> Sophie Pamerlon (GBIF France), <br /> Régine Vignes-Lebbe (UPMC - GBIF France)."
+  title: "The GBIF France new portal : Atlas of Living France (ALF)"
+  link: "6-ALF-poster.pdf"
+  type: "Poster"
   ext: false
