--- a/_data/events/08.yml
+++ b/_data/events/08.yml
@@ -1,15 +1,15 @@
 id: "8"
-title: "GBIF France spatial portal in production (10/06/2015)"
-type: Portal
-description: <p class="text-justify">During the GBIF France 10th anniversary, GBIF France technical team presented the new spatial portal based on Atlas of Living Australia modules. </p>
-date: June 10, 2016 
-place: Paris, France - Muséum national d'Histoire naturelle
+title: "Public Symposium, GB22"
+type: Conference
+description: <p class="text-justify">Paco Pando, former GBIF Spain node manager, talked about the power of a open source platform and collaborations linked to it for the entire open source community around the biodiversity during the public symposium of the GBIF Governing Board in 2015. </p>
+date: October 9, 2015 
+place: Antananarivo, Madagascar - International Conference Center of Ivato
 valide: false
 presentation: true
 materials:
 - id: "1"
-  speaker: "Marie-Elise Lecoq, <br /> Fabien Cavière."
-  title: "The French GBIF national spatial portal (Atlas of Living France)"
-  link: "http://spatial.gbif.fr"
-  type: "Portal"
-  ext: true 
+  speaker: "Paco Pando (GBIF Spain)"
+  title: "Atlas of Living Australia for GBIF Nodes: A collaborative endeavor"
+  link: "7-ALA-for-nodes.pdf"
+  type: "Talk"
+ext: false
