--- a/_data/events/11.yml
+++ b/_data/events/11.yml
@@ -1,21 +1,21 @@
 id: "11"
-title: "TDWG 2016: Standards Supporting Innovation in Biodiversity Research and Conservation"
+title: "GEO BON Open Science Conference"
 type: Conference
-description: <p class="text-justify">During the conference, GBIF France team with the help of the community presented the Living Atlases as well as the Atlas of Living Australia modules. Through a talk, GBIF France technical team was able to describe an existing example of national data portal based on ALA platform in order to show how it works for potential future users of these tools. The community wrote its first poster showing its members and its projects. </p>
-date: December 5, 2016 - December 9, 2016
-place: Santa Clara de San Carlos, Costa Rica - Tecnológico de Costa Rica (TEC)
+description:  <p class="text-justify">In July 2016, during the GEO BON conference, a session and hands-on workshop with "National Biodiversity Monitoring Network" as main subject had been proposed by iDiv, Atlas of Living Australia and other institutions. During this session, two presentations have been made about Atlas of Living Australia tools and community. All abstracts from this session are available on the <a href="http://conf2016.geobon.org/Downloads/PDF/GEOBON_Abstract_Book_OSC2016.pdf" target="_blank">official website</a> (beginning at page 99). </p>
+date: July 4, 2016 - July 8, 2016
+place: Liepzig, Germany - Helmholtz Centre for Environmental Research – UFZ
 valide: false
 presentation: true
 materials:
 - id: "1"
-  speaker: "<b>Marie-Elise Lecoq (GBIF France)</b>, <br /> Anne-Sophie Archambeau (GBIF France), <br /> Eric Chenin (IRD - GBIF France), <br /> Fabien Cavière (GBIF France), <br /> Sophie Pamerlon (GBIF France), <br /> Régine Vignes-Lebbe (UPMC - GBIF France)."
-  title: www.gbif.fr - French National Portal of GBIF
-  link: "11-Lecoq-ALF.pdf"
+  speaker: "David Martin (CSIRO/GBIF), <br /> <b>Peter Brenton (CSIRO)</b>, <br /> Stephanie von Gavel (CSIRO)."
+  title: "The Atlas of Living Australia – A modular biodiversity information platform with global implementations"
+  link: ""
   type: "Talk"
-  ext: false
 - id: "2"
-  speaker: "Marie-Elise Lecoq (GBIF France), <br/> Miguel Carboni (Sistema Nacional de Datos Biológicos), <br/> Fabien Cavière (GBIF France), <br/> Rui Figueira (GBIF Portugal), <br/> Santiago Martinez de la Riva (GBIF Spain), <br/> David Martin (Atlas of Living Australia)"
-  title: "The community around Atlas of Living Australia's platform"
-  link: "11-poster-community.pdf"
-  type: "Poster"
-  ext: false
+  speaker: "Marie-Elise Lecoq (GBIF France), <br /> Dave Martin (Atlas of Living Australia)."
+  title: "Atlas of Living France: GBIF France's portal access to primary data about biodiversity provided by French institutions"
+  link: "9-Lecoq-GEOBON.pdf"
+  type: "Talk"
+  ext: false 
+
