--- a/_data/events/10.yml
+++ b/_data/events/10.yml
@@ -1,15 +1,15 @@
 id: "10"
-title: "GBIF France spatial portal in production (10/06/2015)"
+title: "Launch of the NBN Atlas Scotland (27/05/2016)"
 type: Portal
-description: <p class="text-justify">During the GBIF France 10th anniversary, GBIF France technical team presented the new spatial portal based on Atlas of Living Australia modules. </p>
-date: June 10, 2016 
-place: Paris, France - Muséum national d'Histoire naturelle
+description: <p class="text-justify">The NBN Atlas Scotland has been made possible by the partnership formed by SNH, Scotland’s Environment Web (SEWeb), the Atlas of Living Australia and the Commonwealth Scientific and Industrial Research Organisation of Australia (CSIRO), Scottish Environment Protection Agency (SEPA), the NBN Trust, RSPB and the Scottish Biodiversity Information Forum (SBIF), with funding from the SEWeb LIFE+ project and SNH. </p>
+date: May 27, 2016 
+place: Edinburgh, UK - Royal Botanic Gardens 
 valide: false
 presentation: true
 materials:
 - id: "1"
-  speaker: "Marie-Elise Lecoq, <br /> Fabien Cavière."
-  title: "The French GBIF national spatial portal (Atlas of Living France)"
-  link: "http://spatial.gbif.fr"
+  speaker: "David Martin, CSIRO / ALA"
+  title: "NBN Atlas Scotland"
+  link: "https://scotland.nbnatlas.org/"
   type: "Portal"
   ext: true 
