--- a/_data/events/11.yml
+++ b/_data/events/11.yml
@@ -1,21 +1,15 @@
 id: "11"
-title: "GEO BON Open Science Conference"
-type: Conference
-description:  <p class="text-justify">In July 2016, during the GEO BON conference, a session and hands-on workshop with "National Biodiversity Monitoring Network" as main subject had been proposed by iDiv, Atlas of Living Australia and other institutions. During this session, two presentations have been made about Atlas of Living Australia tools and community. All abstracts from this session are available on the <a href="http://conf2016.geobon.org/Downloads/PDF/GEOBON_Abstract_Book_OSC2016.pdf" target="_blank">official website</a> (beginning at page 99). </p>
-date: July 4, 2016 - July 8, 2016
-place: Liepzig, Germany - Helmholtz Centre for Environmental Research – UFZ
+title: "GBIF France spatial portal in production (10/06/2015)"
+type: Portal
+description: <p class="text-justify">During the GBIF France 10th anniversary, GBIF France technical team presented the new spatial portal based on Atlas of Living Australia modules. </p>
+date: June 10, 2016 
+place: Paris, France - Muséum national d'Histoire naturelle
 valide: false
 presentation: true
 materials:
 - id: "1"
-  speaker: "David Martin (CSIRO/GBIF), <br /> <b>Peter Brenton (CSIRO)</b>, <br /> Stephanie von Gavel (CSIRO)."
-  title: "The Atlas of Living Australia – A modular biodiversity information platform with global implementations"
-  link: ""
-  type: "Talk"
-- id: "2"
-  speaker: "Marie-Elise Lecoq (GBIF France), <br /> Dave Martin (Atlas of Living Australia)."
-  title: "Atlas of Living France: GBIF France's portal access to primary data about biodiversity provided by French institutions"
-  link: "9-Lecoq-GEOBON.pdf"
-  type: "Talk"
-  ext: false 
-
+  speaker: "Marie-Elise Lecoq, <br /> Fabien Cavière."
+  title: "The French GBIF national spatial portal (Atlas of Living France)"
+  link: "http://spatial.gbif.fr"
+  type: "Portal"
+  ext: true 
