--- a/_data/events/17.yml
+++ b/_data/events/17.yml
@@ -1,15 +1,8 @@
 id: "17"
-title: "CESP Canadensys - GBIF France"
-type: Workshop
-description: <p class="text-justify">Through the CESP program from GBIF, GBIF France has helped Canadensys to install and configure its own data portal based on Atlas of Living Australia (ALA) tools. One of the main goal of this partnership is to improve the documentation in English but also in French. By this way, the community will be open to French-speaking countries, espacially in Africa. During this workshop, we redefined all the <a href="https://github.com/atlasoflivingaustralia/documentation/wiki" target="_blank">documentation</a> architecture and Fabien Cavière from GBIF France took the lead in order to improve this part in the community.  Documentation is the key factor to make this community work.</p>
-date: July 3th, 2017 - July 4th, 2017
-place: Montreal, Canada - Canadensys Headquarters
+title: "European Nodes Meeting 2017"
+type: Meeting
+description: <p class="text-justify">During the European Nodes Meeting 2017, several presentations were made by members of the community in order to present their work to the GBIF European community. A technical workshop between advanced members was organized as a side event to this meeting. </p>
+date: May 8, 2017 - May 11, 2017
+place: Stockholm, Sweden - Swedish Museum of Natural History.
 valide: false
-presentation: true
-materials:
-- id: "1"
-  speaker: "Jérémy Goimard (Canadensys)"
-  title: ""
-  link: ""
-  type: "Talk"
-  ext: false
+presentation: false
