--- a/_data/events/20.yml
+++ b/_data/events/20.yml
@@ -1,8 +1,15 @@
 id: "20"
-title: "Living Atlases workshop (CESP)"
-type: Workshop
-description: <p class="text-justify">This 5-day workshop will be funded for partners of this project through the GBIF CESP Program. The main objectives will be install or improve collectory and biocache modules, to install or improve the spatial portal and BIE modules.</p> <p class="text-justify">If you like to participate but are not a partner, you can contact GBIF Spain or <a href="http://www.gbif.fr/contact" target="_blank">GBIF France</a></p>
-date: February 12, 2018 - February 16, 2018
-place: Madrid, Spain - Real Jardin Botanico
-valide: true
-presentation: false
+title: "Regional Engagement Workshop, BID Pacific"
+type: Meeting
+description: <p class="text-justify">During the Pacific regional meeting around BID projects, Anne-Sophie Archambeau, the GBIF France Node Manager, presented the Living Atlases community. The discussion opened by this presentation helped the BID project leads to work on the possibility of using Atlas of Living Australia modules for creating a regional platform using National Biodiversity Network Atlas from UK, as an example. </p>
+date: July 27th, 2017 - July 28th, 2017
+place: Apia, Samoa - SPREP Headquarters
+valide: false
+presentation: true
+materials:
+- id: "1"
+  speaker: "<b>Anne-Sophie Archambeau (GBIF France)</b>, <br /> David Martin (Atlas of Living Australia), <br /> Marie-Elise Lecoq (GBIF France)."
+  title: "Living Atlases community"
+  link: "13-ALA-community.pdf"
+  type: "Talk"
+  ext: false
